fix: Move all base declarations of `--ButtonTertiary--gapH` to `:root`

--- a/src/scss/styles/buttons.scss
+++ b/src/scss/styles/buttons.scss
@@ -143,7 +143,11 @@
 	--ButtonTertiary--hover--dashWidth: #{$var--space-4};
 	--ButtonTertiary--dashSpace: #{$var--space-2};
 	--ButtonTertiary--dashHeight: 2px;
-	--ButtonTertiary--marginRight: #{between_phone_netbook(16, 24)};
+	--ButtonTertiary--gapH: #{between_phone_netbook(16, 24)};
+
+	@include media($mq-wide) {
+		--ButtonTertiary--gapH: 24px;
+	}
 }
 $var--ButtonTertiary--color: var(--ButtonTertiary--color);
 $var--ButtonTertiary--dashColor: var(--ButtonTertiary--dashColor);
@@ -151,6 +155,7 @@ $var--ButtonTertiary--dashWidth: var(--ButtonTertiary--dashWidth);
 $var--ButtonTertiary--hover--dashWidth: var(--ButtonTertiary--hover--dashWidth);
 $var--ButtonTertiary--dashSpace: var(--ButtonTertiary--dashSpace);
 $var--ButtonTertiary--dashHeight: var(--ButtonTertiary--dashHeight);
+$var--ButtonTertiary--gapH: var(--ButtonTertiary--gapH);
 
 @mixin ButtonTertiaryStyle($static: false) {
 	$borderRadius: prem(8);
@@ -170,14 +175,10 @@ $var--ButtonTertiary--dashHeight: var(--ButtonTertiary--dashHeight);
 	padding-right: calc(
 		#{$var--ButtonTertiary--hover--dashWidth} - #{$var--ButtonTertiary--dashWidth}
 	);
-	margin-right: var(--ButtonTertiary--marginRight);
+	margin-right: $var--ButtonTertiary--gapH;
 	margin-bottom: $var--space-1;
 	font-weight: 700;
 	transition: all 100ms ease-in;
-
-	@include media($mq-wide) {
-		--ButtonTertiary--marginRight: 24px;
-	}
 
 	&::before {
 		content: '';
